Adds a transfer learning intro notebook

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ pizza_steak
 10_food_classes_all_data.zip
 10_food_classes_all_data
 __MACOSX
+10_food_classes_10_percent.zip
+10_food_classes_10_percent
